# askgordie

./: .env.example  .gitignore  .mcp.json  pyproject.toml
.claude/skills/: canadagpt-api-client.md  connexxia-python-project.md  gordie-voice-ops.md  gordie-voice-testing.md  on-device-ai-stack.md  pi5-provisioning.md  systemd-service-author.md
config/: default.yaml
docs/superpowers/plans/: 2026-04-26-session-recap.md
docs/superpowers/specs/: 2026-04-26-session-recap-design.md
mcp/canadagpt-voice-testing/: pyproject.toml
mcp/canadagpt-voice-testing/canadagpt_voice_testing/: server.py
mcp/gordie-voice-ops/: pyproject.toml
mcp/gordie-voice-ops/gordie_voice_ops/: server.py
scripts/: install_coral.sh  preview_voices.py  run_mac.sh  setup_mac.sh  setup_pi.sh
src/gordie_voice/: __init__.py  __main__.py  app.py  config.py
src/gordie_voice/audio/: capture.py  playback.py  tones.py  vad.py
src/gordie_voice/canadagpt/: client.py  direct_anthropic.py  shaper.py
src/gordie_voice/device/: identity.py  registry.py
src/gordie_voice/display/: persona.py
src/gordie_voice/factcheck/: checker.py
src/gordie_voice/opinions/: social.py  uploader.py
src/gordie_voice/payments/: manager.py  square_client.py
src/gordie_voice/personas/: definitions.py  manager.py  prompt_builder.py  types.py
src/gordie_voice/queue/: manager.py
src/gordie_voice/recording/: categories.py  recorder.py
src/gordie_voice/registration/: manager.py
src/gordie_voice/sessions/: cleanup.py  store.py  sync.py
src/gordie_voice/stt/: base.py  deepgram.py  faster_whisper.py  whisper_api.py  whisper_cpp.py
src/gordie_voice/tts/: base.py  elevenlabs.py  espeak.py  google_cloud.py  piper.py  resemble.py
src/gordie_voice/util/: logging.py  metrics.py
src/gordie_voice/vision/: presence.py
supabase/migrations/: 001_opinions.sql  002_device_registry.sql  003_payments.sql  004_queue.sql  005_historical_personas.sql  006_kiosk_sessions.sql
systemd/: gordie-display-secondary.service  gordie-display.service  gordie-voice.service
tests/: test_session_store.py  test_session_sync.py  test_shaper.py  test_state_machine.py
(+10 files in other folders)
