[project]
name = "gordie-voice"
version = "0.1.0"
description = "Raspberry Pi 5 voice appliance for CanadaGPT — sovereign Canadian civic AI"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "structlog>=23.0",
    "httpx>=0.25",
    "openwakeword>=0.6",
    "silero-vad>=5.0",
    "deepgram-sdk>=3.0",
    "elevenlabs>=1.0",
    "opencv-python-headless>=4.8",
    "mediapipe>=0.10",
    "flask>=3.0",
    "flask-socketio>=5.3",
    "gevent>=23.0",
    "qrcode[pil]>=7.4",
    "squareup>=38.0",
    "google-cloud-texttospeech>=2.14",
    "google-auth>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
local-stt = ["whispercpp>=0.0.17"]
local-tts = ["piper-tts>=1.2"]
coral = ["pycoral>=2.0"]

[project.scripts]
gordie-voice = "gordie_voice.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gordie_voice"]
sources = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
