[project]
name = "gordie-voice-ops-mcp"
version = "0.1.0"
description = "MCP server for Gordie Voice appliance operations"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "structlog>=23.0",
    "psutil>=5.9",
]

[project.scripts]
gordie-voice-ops = "gordie_voice_ops.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
